--- a/META.yml
+++ b/META.yml
@@ -3,8 +3,9 @@
 name:         IPC-Locker
 version:      1.433
 version_from: lib/IPC/Locker.pm
+license:      perl
 installdirs:  site
 requires:
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: hand
