--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ version_from: lib/IPC/Locker.pm
 license:      perl
 installdirs:  site
 requires:
+    Time::HiRes:                   0
 
 distribution_type: module
 generated_by: hand
