Use fully qualified domain name instead of hostname.
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@53 5359c949-c622-0410-b959-aa3a61b3b029

--- a/META.yml
+++ b/META.yml
@@ -6,6 +6,7 @@ version_from: lib/IPC/Locker.pm
 license:      perl
 installdirs:  site
 requires:
+    Net::Domain:                   0
     Time::HiRes:                   0
 
 distribution_type: module
