Fix --help to use Pod::Usage instead of depreciated pod2text.
git-svn-id: file://localhost/svn/perltools/IPC-Locker/trunk/IPC-Locker@63 5359c949-c622-0410-b959-aa3a61b3b029

--- a/META.yml
+++ b/META.yml
@@ -7,6 +7,7 @@ license:      perl
 installdirs:  site
 requires:
     Net::Domain:                   0
+    Pod::Usage:                    0
     Time::HiRes:                   0
 
 distribution_type: module
