--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,22 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+--- #YAML:1.0
 name:         IPC-Locker
 version:      1.484
 version_from: lib/IPC/Locker.pm
+abstract:     Distributed lock handler
 license:      perl
 installdirs:  site
+author:
+    - Wilson Snyder <wsnyder@wsnyder.org>
+resources:
+    homepage: http://www.veripool.org/ipc-locker
+    bugtracker: http://www.veripool.org/ipc-locker-bugs
 requires:
     Net::Domain:                   0
-    Pod::Usage:                    0
+    Pod::Usage:                    1.34
     Time::HiRes:                   0
 
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.4.html
+    version: 1.4
 distribution_type: module
 generated_by: hand
