--- a/META.yml
+++ b/META.yml
@@ -8,8 +8,8 @@ installdirs:  site
 author:
     - Wilson Snyder <wsnyder@wsnyder.org>
 resources:
-    homepage: http://www.veripool.org/ipc-locker
-    bugtracker: http://www.veripool.org/ipc-locker-bugs
+    homepage: https://www.veripool.org/ipc-locke
+    bugtracker: https://www.veripool.org/ipc-locker
 requires:
     Net::Domain:                   0
     Pod::Usage:                    1.34
